Change footer column width to 25% to accommodate all 4 columns and adjust widths in media queries to ensure the column widths align with the breakpoints for all screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,7 +400,7 @@ main {
 }
 
 .footer-column {
-    width: 33.33%;
+    width: 25%;
     padding: 5px 15px;
 }
 
@@ -498,8 +498,7 @@ main {
 @media screen and (max-width:574px) {
     
     .footer-column {
-        width: 66.66%;
-        margin-bottom: 40px;
+        width: 100%;
     }
 }
 
@@ -575,8 +574,8 @@ main {
     }
 
     .footer-column {
-        width: 66.66%;
-        margin-bottom: 40px;
+        width: 50%;
+        margin-bottom: 35px;
     }
 }
 
